adding grunt function to heroku

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Ray Personal Website & Portfolio",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "grunt",
+    "start": "node server.js"
   },
   "keywords": [
     "Ray",
