--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "app.js",
   "scripts": {
     "postinstall": "grunt build",
-    "start": "node server.js"
   },
   "keywords": [
     "Ray",
@@ -16,16 +15,16 @@
   "author": "Ray Rinaldy",
   "license": "ISC",
   "devDependencies": {
-    "grunt": "^1.0.1",
     "grunt-contrib-compass": "^1.1.1",
     "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-pug": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-express-server": "^0.5.3",
     "grunt-sass": "^2.0.0",
     "jit-grunt": "^0.10.0"
   },
   "dependencies": {
+    "grunt": "^1.0.1",
+    "grunt-cli": "^1.2.0",
     "grunt-express-server": "^0.5.3"
   }
 }
