--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "postinstall": "grunt build",
+    "start": "node app.js"
   },
   "keywords": [
     "Ray",
