--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "ray-website",
   "version": "1.0.0",
   "description": "Ray Personal Website & Portfolio",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "postinstall": "grunt build",
-    "start": "node app.js"
+    // "postinstall": "grunt build",
+    "start": "node server.js"
   },
   "keywords": [
     "Ray",
