--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-cssmin": "^2.0.0",
     "grunt-contrib-pug": "^1.0.0",
+    "grunt-contrib-uglify": "^2.2.1",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-sass": "^2.0.0",
     "jit-grunt": "^0.10.0"
@@ -27,7 +28,7 @@
   "dependencies": {
     "grunt": "^1.0.1",
     "grunt-cli": "^1.2.0",
-    "grunt-express-server": "^0.5.3",
     "grunt-contrib-uglify": "^2.2.1",
+    "grunt-express-server": "^0.5.3"
   }
 }
