--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "grunt": "^1.0.1",
     "grunt-cli": "^1.2.0",
     "grunt-contrib-uglify": "^2.2.1",
-    "grunt-express-server": "^0.5.3"
+    "grunt-express-server": "^0.5.3",
+    "load-grunt-tasks": "^3.5.2"
   }
 }
